/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Main.java to edit this template
 */
package burgerking;

/**
 * 
 * @author Nicolas Guinzio & Ariel Risoluto.
 */
public class Main {

    /**
     * @param args the command line arguments
     */
    public static void main(String[] args) {
        ControlIngreso s = new ControlIngreso();

        s.ingresar();
    }

}
